Making RSVP Page as an independent page to ensure safari does not break on models

--- a/src/components/EventDetails/EventDetailsPresenter.scss
+++ b/src/components/EventDetails/EventDetailsPresenter.scss
@@ -250,38 +250,12 @@ body {
 }
 
 .rsvp-modal {
-  position: fixed;
-  right: -100%;
-  top: 0px;
-  width: 100%;
-  height: 100vh;
   background: $white;
-  transition: all 0.25s ease-in-out;
-  z-index: 999;
-  &.active {
-    right: 0px;
-  }
+
   .rsvp-actions {
     padding: 0 4px;
   }
-  // .modal_header {
-  //   display: flex;
-  //   align-items: center;
-  //   box-shadow: none;
-  //   height: 50px;
-  //   padding: 0 8px;
-  //   z-index: 9;
-  //   ion-label {
-  //     color: $GoFlockColor;
-  //     text-align: center;
-  //     font-family: $GoFlockFont;
-  //     font-size: 14px;
-  //     font-style: normal;
-  //     font-weight: 500;
-  //     line-height: 20px;
-  //     width: 100%;
-  //   }
-  // }
+
   .guest-section {
     display: flex;
     padding: 0;
